[SPLUNK] Patterns added to remove false errors

--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -176,7 +176,6 @@
             "failed to sign: ",
             "abi_info:",
             "[debug]",
-            "errorlog.c",
             "error.cpp",
             "commit message:",
             "echo",
@@ -238,21 +237,18 @@
             "scriptcompletionorfailurestatus",
             "error.png","controlopstatus[] = { ",
             "updatingerrormsgforfilenotfound",
-            "libgpg-error.so.0","../../sources/",
+            "../../sources/",
             "testerrorverification","errors_config.csv",
             "'strerror'"," retryerror","build errors",
             "summary: 1 task failed:",
-            "libgpg-error-1.35-r0",
-            "libgpg-error-native-1.35-r0",
-            "libgpg-error_1.35.bb","0 errors.",
+            "0 errors.",
             "note: tasks summary:",
-            "libgpg-error_1.36.bb",
-            "libgpg-error-1.36-r0",
-            "libgpg-error-native-1.36-r0",
             "summary:","/system_error",
             "error_constants.h","failures:",
             "test_parity error injection",
-            "head is now at","libgpg-error","eventfacet-error",
+            "head is now at",
+            "libgpg-error",
+            "eventfacet-error",
             "error summary","check error:",
             "warning:",": [ {","*** [install] error 1",
             "error: script returned exit code",
@@ -265,7 +261,7 @@
             "not found updateinfo for:",
             "not found other for:",
             "xlink_error","note: ",
-            "errormessagedataexchanger.c",
+            "errormessagedataexchanger",
             "ioerror:",
             "download&failedmirror",
             "errors occurred!",
@@ -274,10 +270,10 @@
             "applying:",
             "error.patch",
             "opencv.patch",
-            "error-inject.o",
+            "error-inject.",
             "error.o",
             "error-inj.o",
-            "error.mod.o",
+            "error.mod.",
             "error.ko",
             "strerror_r",
             "currror.c.o",
@@ -304,14 +300,37 @@
             "qerrorfn_p.h",
             "qvalidationerror_p.h",
             "qsqlerror",
-            "error_messages_p.h",
+            "error_messages",
             "qdbuserror",
             "qxmlerrorhandler",
             "qsslerror",
             "qqmlerror",
             "qv4errorobject_p.h",
             "qv4domerrors_p.h",
-            "qv4sqlerrors_p.h"
+            "qv4sqlerrors_p.h",
+            "error_handler.cpp",
+            "kerror",
+            "-werror",
+            "error_r",
+            "error-injection.h",
+            "errors-when-building-with.patch",
+            ".patch",
+            "error support",
+            "error_allocation_failed",
+            "error_cflags",
+            "errors summary",
+            "error_handling",
+            "errors... no",
+            "_error_",
+            "pcie_errors_",
+            "errorconf",
+            "errorstatus",
+            "error0reporting",
+            "error1reporting",
+            "errorlog",
+            "error-perl",
+            "PrintErrorLevel",
+            "errors.py"
         ]
     }
 }
