[SPLUNK] PrintErrorLevel changed to lowercase

--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -330,7 +330,7 @@
             "error1reporting",
             "errorlog",
             "error-perl",
-            "PrintErrorLevel",
+            "printerrorlevel",
             "errors.py"
         ]
     }
