[SPLUNK] Synk error added

--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -171,7 +171,9 @@
             "[errno 111] connection refused": "Application Error: BDBA",
             
             "bdstool: scan failed": "Application Error: Protex",
-            "bom list error": "Application Error: Protex"
+            "bom list error": "Application Error: Protex",
+            
+            "Internal error (reference:": "Application Error: Snyk"
             
         },
         
