[SPLUNK] Error patterns added

--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -150,7 +150,7 @@
             "error 7000": "Compilation Error",
             "cmake error": "Compilation Error",
             "msb1009": "Compilation Error",
-            "no such file or directory": "Compilation Error",
+            "no such file or directory": "Compilation Error;",
             "makefile:": "Compilation Error",
             "prikey size is not same as pubkey": "Compilation Error",
             "attestation server read": "Compilation Error",
@@ -213,7 +213,6 @@
             "failed to sign: ",
             "abi_info:",
             "[debug]",
-            "error.cpp",
             "commit message:",
             "echo",
             "onerrorcontinueanalysis",
@@ -224,7 +223,6 @@
             "errorlib.c",
             "0 error(s)",
             "erroruixmlwriter.cpp",
-            "error.h",
             "errorhandlingcontroller.js",
             "errorlib.lib errorlib.obj",
             "errorlib.obj  errorlib.lib",
@@ -265,13 +263,12 @@
             "error: error: no workspace found!",
             "running on ",
             "error_lib.",
-            "error.c",
             "tx_thread_stack_error_handler.c",
             "tx_thread_stack_error_notify.c",
             "error_id.h",
             "error_isolation.c",
             "scriptcompletionorfailurestatus",
-            "error.png","controlopstatus[] = { ",
+            "controlopstatus[] = { ",
             "updatingerrormsgforfilenotfound",
             "../../sources/",
             "testerrorverification","errors_config.csv",
@@ -304,20 +301,16 @@
             "cmakeerror.log",
             "-wno-error=",
             "applying:",
-            "error.patch",
             "opencv.patch",
             "error-inject.",
-            "error.o",
-            "error-inj.o",
+            "error-inj",
             "error.mod.",
-            "error.ko",
             "strerror_r",
             "currror.c.o",
             "error_listener.",
             "qerrormessage.png",
             "qerrormessage.html",
             "qerrormessage-members.html",
-            "error.html",
             "error-members.html",
             "error-obsolete.html",
             "errorhandler.html",
@@ -326,13 +319,12 @@
             "error-message.png",
             "errors.ui",
             "errordialog.qml",
-            "error.qml",
             "qerrormessage",
             "qscxmlerror",
             "qcborerror",
             "qcborparsererror",
             "qsystemerror_p.h",
-            "QJsonParseError",
+            "qjsonparseerror",
             "qerrorfn_p.h",
             "qvalidationerror_p.h",
             "qsqlerror",
@@ -366,8 +358,30 @@
             "errorlog",
             "error-perl",
             "printerrorlevel",
-            "errors.py",
-            "error: info is different"
+            "errors.",
+            "error: info is different",
+            "error-dump.",
+            "stderr_console.",
+            "error-codes.rst",
+            "error-recovery.",
+            "error-inj.",
+            "expected_stderr",
+            "failed in branch ",
+            "warning",
+            "memory-failure.",
+            "error 1",
+            "error 2",
+            "invalid command",
+            "create mode",
+            "/errors/",
+            "error.",
+            "failure_",
+            "error!  the dkms.conf",
+            "gai_strerror",
+            "stderr: remote:",
+            "git did not send all necessary objects",
+            "jsondecodeerror",
+            "error: index-pack"
         ]
     }
 }
