--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -409,7 +409,7 @@
             "authentication error",
 			"stderr begin",
 			"stderr end",
-			"please refer to logs for more information"
+			"please refer to logs for more information",
             "authentication error"
         ]
     }
