Uodated the uppercase -> lowercase

--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -165,7 +165,7 @@
             "does not exist":"Compilation Error",
             "command error": "Compilation Error",
             "code of compile_tool": "Compilation Error",
-            "ERROR: ParseError at": "Compilation Error",
+            "error: parseerror at": "Compilation Error",
             "could not apply patch": "Compilation Error",
             "patch does not apply": "Compilation Error",
             
