--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -39,7 +39,7 @@
             "git clone": "Connectivity Error: Git",
             "cloning the git-repo": "Connectivity Error: Git",
             "error: failed to push some refs to": "Connectivity Error: Git",
-            "failed to fetch": "Connectivity Error: Git",
+            "failed to fetch from https://gitlab": "Connectivity Error: Git",
             "giterror": "Connectivity Error: Git",
             "error fetching remote": "Connectivity Error: Git",
             "an optional update for edkrepo is available and can be installed using: edkrepo update":"Configuration Error: Git",
@@ -48,6 +48,8 @@
             "uploading artifacts": "Connectivity Error: Artifactory",
             "expectation failed": "Application Error: Artifactory",
             "401 response message: artifactory":"Connectivity Error: Artifactory",
+            "failed to fetch some objects from 'https://ubit-artifactory": "Connectivity Error: Artifactory",
+            "could not read username for 'https://ubit-artifactory": "Connectivity Error: Artifactory",
             "artifactory returned the following errors":"Application Error: Artifactory",
             "service temporarily unavailable":"Application Error: Artifactory",
             "failed to deploy file. status code: 503":"Application Error: Artifactory",
@@ -57,13 +59,15 @@
             "error occurred for request ": "Application Error: Artifactory",
             "failed to deploy file. status code: 502":"Connectivity Error: Artifactory",
             
+            "git credentials for https://ubit-artifactory": "Application Error: GitLFS",
+            
             "keyerror:": "Application Error: HSDES",
             
             "nameerror:": "Application Error",
             "typeerror:": "Application Error",
             "attributeerror: ": "Application Error",
             "abortexception:": "Application Error",
-             "configuration error": "Application Error",
+            "configuration error": "Application Error",
             "server error": "Application Error",
             "java.io.ioexception": "Application Error",
         
@@ -155,14 +159,9 @@
             "prikey size is not same as pubkey": "Compilation Error",
             "attestation server read": "Compilation Error",
             "failed in branch build - bypass": "Compilation Error",
-            "could not find": "Compilation Errorr",
             "filenotfounderror:":"Compilation Error",
-            "not found": "Compilation Error",
-            "not available": "Compilation Error",
             "doesn't exist": "Compilation Error",
             "couldn't find": "Compilation Error",
-            "no such property": "Compilation Error",
-            "does not exist":"Compilation Error",
             "command error": "Compilation Error",
             "code of compile_tool": "Compilation Error",
             "error: parseerror at": "Compilation Error",
