--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -28,12 +28,12 @@
         
         "error_category": {
             "gitlab error": "Application Error: Git",
-            "could not read from remote repository":"Application Error: Git",
+            "could not read from remote repository": "Application Error: Git",
             "not a git repository": "Application error: Git",
             "the remote end hung up unexpectedly": "Application error: Git",
             "unable to access 'https://gitlab.devtools.intel.com": "Connectivity Error: Git",
             "gitlab is not responding": "Connectivity Error: Git",
-            "authentication failed for":"Connectivity Error: Git",
+            "authentication failed for": "Connectivity Error: Git",
             "remote: unauthorized":"Configuration Error: Git",
             "error cloning": "Connectivity Error: Git",
             "git clone": "Connectivity Error: Git",
@@ -42,22 +42,22 @@
             "failed to fetch from https://gitlab": "Connectivity Error: Git",
             "giterror": "Connectivity Error: Git",
             "error fetching remote": "Connectivity Error: Git",
-            "an optional update for edkrepo is available and can be installed using: edkrepo update":"Configuration Error: Git",
+            "an optional update for edkrepo is available and can be installed using: edkrepo update": "Configuration Error: Git",
 
             "artifact error": "Connectivity Error: Artifactory",
             "uploading artifacts": "Connectivity Error: Artifactory",
             "expectation failed": "Application Error: Artifactory",
-            "401 response message: artifactory":"Connectivity Error: Artifactory",
+            "401 response message: artifactory": "Connectivity Error: Artifactory",
             "failed to fetch some objects from 'https://ubit-artifactory": "Connectivity Error: Artifactory",
             "could not read username for 'https://ubit-artifactory": "Connectivity Error: Artifactory",
-            "artifactory returned the following errors":"Application Error: Artifactory",
-            "service temporarily unavailable":"Application Error: Artifactory",
-            "failed to deploy file. status code: 503":"Application Error: Artifactory",
-            "http/1.1: connection reset by peer: socket write error":"Application Error: Artifactory",
-            "http/1.1: read timed out":"Connectivity Error: Artifactory",
-            "http/1.1. received status code 503 and message: service temporarily Unavailable":"Connectivity Error: Artifactory",
+            "artifactory returned the following errors": "Application Error: Artifactory",
+            "service temporarily unavailable": "Application Error: Artifactory",
+            "failed to deploy file. status code: 503": "Application Error: Artifactory",
+            "http/1.1: connection reset by peer: socket write error": "Application Error: Artifactory",
+            "http/1.1: read timed out": "Connectivity Error: Artifactory",
+            "http/1.1. received status code 503 and message: service temporarily Unavailable": "Connectivity Error: Artifactory",
             "error occurred for request ": "Application Error: Artifactory",
-            "failed to deploy file. status code: 502":"Connectivity Error: Artifactory",
+            "failed to deploy file. status code: 502": "Connectivity Error: Artifactory",
             
             "git credentials for https://ubit-artifactory": "Application Error: GitLFS",
             
@@ -85,26 +85,26 @@
             "connection timed out": "Connectivity Error",
             
             "directory is not empty": "System Error",
-            "cannot load":"System Error",
+            "cannot load": "System Error",
             "mandatory update for edkrepo": "System Error",
             "loading libraries failed": "System Error",
 
             "nmake : fatal error" : "Compilation Error",   
-            "link : fatal error":"Compilation Error",
-            "error while encapsulate fd image":"Compilation Error",
-            "error while add some named ffs file into the fd image file":"Compilation Error",
-            "must supply an action name and an arg list":"Compilation Error",
-            "class has no constructors":"Compilation Error",
-            "identifier not found":"Compilation Error",
-            "undeclared identifier":"Compilation Error",
-            "invalid target type for dynamic_cast":"Compilation Error",
-            "no certificate supplied in operation":"Compilation Error",
-            "certificate verify failed":"Compilation Error",
-            "signtool error: file not found":"Compilation Error",
-            "abi.error_handling.abi_exception.abiexception":"Compilation Error",
+            "link : fatal error": "Compilation Error",
+            "error while encapsulate fd image": "Compilation Error",
+            "error while add some named ffs file into the fd image file": "Compilation Error",
+            "must supply an action name and an arg list": "Compilation Error",
+            "class has no constructors": "Compilation Error",
+            "identifier not found": "Compilation Error",
+            "undeclared identifier": "Compilation Error",
+            "invalid target type for dynamic_cast": "Compilation Error",
+            "no certificate supplied in operation": "Compilation Error",
+            "certificate verify failed": "Compilation Error",
+            "signtool error: file not found": "Compilation Error",
+            "abi.error_handling.abi_exception.abiexception": "Compilation Error",
             "package_write_rpm": "Compilation Error",
             "requires: openvino": "Compilation Error",
-            "drivers/spi/spi-dw.h" :  "Compilation Error",
+            "drivers/spi/spi-dw.h": "Compilation Error",
             "thunderbay": "Compilation Error",
             "mainline-tracking": "Compilation Error",
             "patch failed": "Compilation Error",
@@ -117,7 +117,7 @@
             "oe_runmake": "Compilation Error",
             "linux-ese-po-kernel": "Compilation Error",
             "thb-lin-bsp-bd-dly": "Compilation Error",
-            "recipe tbh-vpual":"Compilation Error",
+            "recipe tbh-vpual": "Compilation Error",
             "do_image_wic":"Compilation Error" ,
             "no dtb found": "Compilation Error",
             "unable to fetch url from any source": "Compilation Error",
@@ -132,8 +132,8 @@
             "Logfile of failure stored in:": "Compilation Error",
             "function failed: " : "Compilation Error",
             "do_configure" : "Compilation Error",
-            "error: nothing rprovides" :"Compilation Error",
-            "error: required build" :"Compilation Error",
+            "error: nothing rprovides" : "Compilation Error",
+            "error: required build" : "Compilation Error",
             "merge conflict": "Compilation Error",
             "core-image-ese-dev-1.0-r0 do_image_wic": "Compilation Error",
             "following arguments are required": "Compilation Error",
@@ -172,36 +172,36 @@
             "no such container": "System Error",
             "there are no nodes": "System Error",
             
-            "no connection could be made because the target machine actively refused it":"Connectivity Error: Klocwork",
-            "cannot locate kw tools on system":"Configuration Error: klocwork",
-            "cannot locate kwdeployexe on system":"Configuration Error: Klocwork",
-            "unable to get klocwork server version":"Connectivity Error: Klocwork",
+            "no connection could be made because the target machine actively refused it": "Connectivity Error: Klocwork",
+            "cannot locate kw tools on system": "Configuration Error: klocwork",
+            "cannot locate kwdeployexe on system": "Configuration Error: Klocwork",
+            "unable to get klocwork server version": "Connectivity Error: Klocwork",
             "kwadmin: connection to": "Connectivity Error: Klocwork",
             "kwadmin: license check failed": "Application Error: Klocwork",
             "kwadmin: cannot load project": "Application Error: Klocwork",
             "kwadmin: incompatible server version": "Application Error: Klocwork",
             "error occurred during build: tables directory": "Application Error: Klocwork",
             "source list is empty": "Application Error: Klocwork",
-            "kwadmin: authentication failed":"Configuration Error: Klocwork",
+            "kwadmin: authentication failed": "Configuration Error: Klocwork",
             
-            "couldn't find any revision to build": "Configuration Error",
+            "couldn't find any revision to build": "Configuration Error: Jenkins",
             "groovy.lang.missingpropertyexception": "Configuration Error: Jenkins",
-            "errorsexception: startup failed":"Configuration Error: Jenkins",
+            "errorsexception: startup failed": "Configuration Error: Jenkins",
             
             "httperror: 401 - no permission": "Application Error: BDBA",
             "httperror: 502 - invalid responses from another server/proxy.": "Connectivity Error: BDBA",
             "httperror: 404 - nothing matches the given uri": "Application Error: BDBA",
             "urlerror: [errno 104] connection reset by peer": "Connectivity Error: BDBA",
-            "binary scan failed to complete":"Connectivity Error: BDBA",
+            "binary scan failed to complete": "Connectivity Error: BDBA",
             "results is not yet ready": "Application Error: BDBA",
             "scanning is failed": "Application Error: BDBA",
             "httperror: 503 - the server cannot process the request due to a high load": "Application Error: BDBA",
             "[errno 111] connection refused": "Connectivity Error: BDBA",
-            "response got: unauthorized":"Connectivity Error: BDBA",
-            "urlerror: [errno 10054] an existing connection was forcibly closed":"Connectivity Error: BDBA",
+            "response got: unauthorized": "Connectivity Error: BDBA",
+            "urlerror: [errno 10054] an existing connection was forcibly closed": "Connectivity Error: BDBA",
 
             "bdstool: scan failed": "Application Error: Protex",
-            "bdstool: login failed for":"Connectivity Error: Protex",
+            "bdstool: login failed for": "Connectivity Error: Protex",
             "bom list error": "Application Error: Protex",
             
             "Internal error (reference:": "Application Error: Snyk"
