--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -58,6 +58,7 @@
             "http/1.1. received status code 503 and message: service temporarily Unavailable": "Connectivity Error: Artifactory",
             "error occurred for request ": "Application Error: Artifactory",
             "failed to deploy file. status code: 502": "Connectivity Error: Artifactory",
+            "failed to deploy file. status code: 401": "Connectivity Error: Artifactory",
             
             "git credentials for https://ubit-artifactory": "Application Error: GitLFS",
             
@@ -417,7 +418,15 @@
             "pycrypto",
             "v2020.07 release",
             "the remote end hung up unexpectedly",
-            "patch failures can be resolved"
+            "patch failures can be resolved",
+            "pthread_create",
+            "error_cxxflags",
+            "error_objcflags",
+            "failed to create commit hook symlink",
+            "build plugin documentation",
+            "errorignore.html",
+            "gsterrorignore",
+            "cudageterrorstring"
         ]
     }
 }
