--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -60,6 +60,7 @@
             "error occurred for request ": "Application Error: Artifactory",
             "failed to deploy file. status code: 502": "Connectivity Error: Artifactory",
             "failed to deploy file. status code: 401": "Connectivity Error: Artifactory",
+            "error occurred while downloading http://jfstor001.jf.intel.com:8081/artifactory": "Connectivity Error: Artifactory",
             
             "git credentials for https://ubit-artifactory": "Application Error: GitLFS",
             
